# seekndestroy

./: Cargo.toml  README.org  snd.toml
doc/: README.org
src/: appconfig.rs  cli.rs  error.rs  main.rs
