[package]
name = "seekndestroy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.22"
clap = { version = "3", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
toml = "0"
thiserror = "1"
anyhow = "1"
directories = "4"
